<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout



    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/triangle"


    >


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mycode"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Enteremail"
            tools:ignore="HardcodedText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userpass"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/signin"
        android:textAllCaps="false"

        android:textSize="25dp" />


        <Button
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/teal_200"
            android:hint="@string/need_an_account"

            android:textSize="15dp" />

        <Button

        android:id="@+id/xxxx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"

        android:background="@color/teal_200"
        android:textAlignment="center"

        android:textSize="20dp"
        />

        <Button

            android:id="@+id/changelang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Welcome"

            android:background="@color/teal_200"
            android:textAlignment="center"

            android:textSize="20dp"
            />











</LinearLayout>
</ScrollView>