<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">





    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="10sp"

        tools:context=".MainActivity">




    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/test"

        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp" />


    <TextView
       android:id="@+id/yy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/information"

      android:layout_marginTop="50dp"

        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="173dp" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/foods"
        android:textAlignment="center"
        android:textColor="#1937DC"
        android:layout_margin="30dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_height="wrap_content"/>


        <ImageView
            android:id="@+id/ezra"
            android:layout_width="250dp"
            android:layout_height="179dp"
            android:layout_gravity="center"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:src="@drawable/bagumaf" />


        <TextView
            android:layout_width="match_parent"

            android:text="20000.00shs"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="match_parent"
            android:text="Baguma Delicious meal"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"

            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnbagu"
            android:layout_width="200dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:backgroundTint="@color/black"
            android:text="Order"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/nim"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:src="@drawable/nim"/>


        <TextView
            android:layout_width="match_parent"

            android:text="30000.00shs"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="match_parent"

            android:text="Nim Best meal"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"
            android:text="Order"
            android:layout_gravity="center"
            android:id="@+id/btnoxfor"/>



        <ImageView
            android:id="@+id/tri"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="@android:dimen/notification_large_icon_height"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            android:src="@drawable/subz"/>


        <TextView
            android:layout_width="match_parent"

            android:text="10000.00shs"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_width="match_parent"

            android:text="Sabz Restaurant"
            android:textAlignment="center"
            android:textColor="#1937DC"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:textSize="20dp"
            android:text="Order"
            android:layout_gravity="center"
            android:id="@+id/btnoxford"/>








        <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:text="ContactUs"
        android:textAlignment="center"
        android:id="@+id/ContactUs"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20dp"/>




</LinearLayout>
</ScrollView>