<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:fillViewport="true"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Elco FoodApp"
                        android:textAlignment="center"
                        android:textColor="#1937DC"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:gravity="center"
                        android:text="@string/hotels"
                        android:textAlignment="center"
                        android:textColor="#1937DC"
                        android:textSize="30dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/ram"
                        android:textAlignment="center"


                        android:textColor="#1937DC"
                        android:textSize="40sp" />


                    <ImageView
                        android:id="@+id/ramm"
                        android:layout_width="match_parent"

                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/agipu" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="@string/agi"
                        android:textAlignment="center"


                        android:textColor="#1937DC"
                        android:textSize="40sp" />


                    <Button
                        android:id="@+id/btnagip"
                        android:layout_width="200dp"
                        android:layout_height="47dp"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="view"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/max"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/baguma" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="Baguma Hotel "
                        android:textAlignment="center"


                        android:textColor="#1937DC"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btnbaguma"
                        android:layout_width="219dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="view"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/xx"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@android:dimen/notification_large_icon_height"
                        android:layout_marginBottom="@android:dimen/app_icon_size"
                        android:src="@drawable/triangle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="Hotel Triangle "
                        android:textAlignment="center"


                        android:textColor="#1937DC"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btntriangle"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="view"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cc"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@android:dimen/notification_large_icon_height"
                        android:layout_marginBottom="@android:dimen/app_icon_size"
                        android:src="@drawable/view" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="Lake View Hotel "
                        android:textAlignment="center"
                        android:textColor="#1937DC"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btnview"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="view"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/rr"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@android:dimen/notification_large_icon_height"
                        android:layout_marginBottom="@android:dimen/app_icon_size"
                        android:src="@drawable/kash" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="Kash Hotel "
                        android:textAlignment="center"
                        android:textColor="#1937DC"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btnkash"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="view"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView

                        android:id="@+id/ezra"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@android:dimen/notification_large_icon_height"
                        android:layout_marginBottom="@android:dimen/app_icon_size"
                        android:src="@drawable/oxford" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center"
                        android:text="Oxford Hotel "
                        android:textAlignment="center"
                        android:textColor="#1937DC"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btnoxford"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:backgroundTint="@color/black"
                        android:onClick="openmap"
                        android:text="@string/vie"
                        android:textColor="@color/white"
                        android:textSize="20dp" />


                    <Button
                        android:id="@+id/Checkin"
                        android:layout_width="match_parent"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:onClick="openmap"
                        android:text="CheckIn"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>




